* encoding.c (rb_enc_compatible): fix segv on symbols.   [ruby-core:42204] [Bug #5921]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@34350 b2dd03c8-39d4-4d8f-98ff-823fe69b080e