test/ruby/test_encoding.rb
@@ -104,4 +104,10 @@ class TestEncoding < Test::Unit::TestCase
     bug5279 = '[ruby-dev:44469]'
     assert_ruby_status([], '$SAFE=4; "a".encode("utf-16be")', bug5279)
   end
+
+  def test_compatible_p
+    ua = "abc".force_encoding(Encoding::UTF_8)
+    assert_equal(Encoding::UTF_8, Encoding.compatible?(ua, :abc))
+    assert_equal(nil, Encoding.compatible?(ua, 1))
+  end
 end
